--- a/main.tex
+++ b/main.tex
@@ -77,7 +77,7 @@ verification; this follows from the fact that one may put into action a plan
 for verifying $P$ and get out such a verification, and likewise, it is possible
 to propound a plan of verification by appealing to an existing verification.
 
-The judgement we have described so far are ``categorical'' in the sense that
+The judgements we have described so far are ``categorical'' in the sense that
 they are made without assumption. We will need to define a further form of
 judgement, which is called ``hypothetical'', and this is the judgement under
 hypothesis \framebox{\hyp{\mathcal{J}}{\mathcal{J}_1\dots\mathcal{J}_n}}. And
@@ -97,7 +97,7 @@ $\bot$, and we wish to make \isprop{\bot} evident; to do this, we simply state
 what counts as a direct verification of $\bot$, which is that there can be no
 direct verification of $\bot$.
 
-The next basic proposition is trivial true $\top$, and to make \isprop{\top}
+The next basic proposition is trivially true $\top$, and to make \isprop{\top}
 evident, we state that a direct verification of $\top$ is trivial. The meaning
 of $\top$ thus validates the judgement \istrue{\top}.
 
