--- a/main.tex
+++ b/main.tex
@@ -102,7 +102,7 @@ evident, we state that a direct verification of $\top$ is trivial. The meaning
 of $\top$ thus validates the judgement \istrue{\top}.
 
 Next, let us define conjunction; in doing so, we will make evident the
-hypothetical judgmenet \hyp{\isprop{P\land Q}}{\isprop{P},\isprop{Q}};
+hypothetical judgement \hyp{\isprop{P\land Q}}{\isprop{P},\isprop{Q}};
 equivalently, we can display this as a rule of inference:
 \[
   \infer{
@@ -155,7 +155,7 @@ rise to two evident judgements \hyp{\istrue{P\lor Q}}{\istrue{P}} and
 \end{gather*}
 
 Finally, we must define the circumstances under which $P\supset Q$ is a
-proposition (i.e.\ when \isprop{P\supset q} is evident). And we intend this to
+proposition (i.e.\ when \isprop{P\supset Q} is evident). And we intend this to
 be under the circumstances that $P$ is a proposition, and also that $Q$ is a
 proposition assuming that $P$ is true. In other words, \hyp{\isprop{P\supset
 Q}}{\isprop{P}, \hyp{\isprop{Q}}{\istrue{P}}}, or
@@ -202,7 +202,7 @@ propositionhood), and may be written as an inference rule as follows:
 So far, we have given judgements which circumscribe what it means to be a
 proposition, and thence for each proposition, we have by definition a notion of
 what should count as a verification of that proposition. And by definition, to
-assert the judgment \istrue{P} is to assert that one has a verification of $P$,
+assert the judgement \istrue{P} is to assert that one has a verification of $P$,
 but we have not considered any judgements which actually describe such
 verifications.
 
