--- a/main.tex
+++ b/main.tex
@@ -231,7 +231,7 @@ meaning explanation to this new judgement:
 
 But now that we have started to assign expressions to verifications, we must be
 more careful about differentiating \emph{direct verifications} (which we will
-call ``canonical''') from \emph{indirect verifications} (which we will call
+call ``canonical'') from \emph{indirect verifications} (which we will call
 ``non-canonical''). So the domain of expressions must itself be accorded with a
 notion of reduction to canonical form, and this corresponds with putting into
 action a plan of verification in order to get an actual verification.
