--- a/main.tex
+++ b/main.tex
@@ -254,12 +254,12 @@ into account the computational behavior of the expression domain:
   canonical verification for $P'$.
 \end{quote}
 
-As an example, then, the we will update the evidence of the assertion
+As an example, then, we will update the evidence of the assertion
 \hyp{\isprop{P\supset Q}}{\isprop{P},\hyp{\isprop{Q}}{\isprop{P}}}. The meaning
 of this, expanded into spoken language, is as follows:
 \begin{quote}
   To know \hyp{\isprop{P\supset Q}}{\isprop{P},\hyp{\isprop{Q}}{\isprop{P}}} is
-  to know that what counts as a canonical verification of $P\subset Q$ under
+  to know what counts as a canonical verification of $P\subset Q$ under
   the circumstances that \reduce{P}{P'}, such one knows what counts as a
   canonical verification $P'$, and, if one has such a verification,
   \reduce{Q}{Q'} such that one knows what counts as a canonical verification of
