Clarify definition of P true in terms of M in P

--- a/main.tex
+++ b/main.tex
@@ -284,10 +284,10 @@ Programming} (Martin-L\"of, 1979). In fact, we may dispense with the original
 \istrue{P} form of judgement by \emph{defining} it in terms of the new
 \ver{M}{P} judgement as follows:
 \[
-  \infer={
-    \ver{M}{P}
-  }{
+  \infer{
     \istrue{P}
+  }{
+    \ver{M}{P}
   }
 \]
 
