--- a/main.tex
+++ b/main.tex
@@ -394,7 +394,7 @@ The proof-theoretic type theories on the one hand are often called
 ``intensional'' and the meaning-theoretic type theories on the other hand are
 usually ``extensional''; these characterizations are certainly true, though I
 fear that comparing one of the former with one of the latter is not quite fair,
-since they is not any clear analogy to be had. That is to say, the judgement
+since there is not any clear analogy to be had. That is to say, the judgement
 \ver{M}{P} is a judgement which is added to a logical theory and its meaning is
 (briefly) ``$M$ evaluates to a canonical proof of $P$'', whereas $M:P$ cannot
 be construed as a judgement added to a logical theory. Instead, it must be
