fix confusing wording

--- a/main.tex
+++ b/main.tex
@@ -396,7 +396,7 @@ usually ``extensional''; these characterizations are certainly true, though I
 fear that comparing one of the former with one of the latter is not quite fair,
 since there is not any clear analogy to be had. That is to say, the judgement
 \ver{M}{P} is a judgement which is added to a logical theory and its meaning is
-(briefly) ``$M$ evaluates to a canonical proof of $P$'', whereas $M:P$ cannot
+(briefly) ``$M$ evaluates to a canonical verification of $P$'', whereas $M:P$ cannot
 be construed as a judgement added to a logical theory. Instead, it must be
 understood as part of a theory which is overlayed atop an existing logical
 theory; it is possible to understand the theory which contains the judgement
